# spectro-fast

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
spectrofast/: __init__.py  _fft_build.py  _spectrogram.py
spectrofast/csrc/: complex_spectrogram.c  complex_spectrogram.h  real_spectrogram.c  real_spectrogram.h
tests/: test_spectrogram.py
