[build-system]
requires = ["setuptools>=64", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrofast"
version = "0.1.0"
description = "Fast FFTW-based spectrogram computation — a drop-in replacement for scipy.signal.spectrogram"
requires-python = ">=3.8"
license = "GPL-2.0-or-later"
dependencies = [
    "numpy",
    "cffi>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["spectrofast*"]

[tool.setuptools.package-data]
"spectrofast" = [
    "csrc/*.c",
    "csrc/*.h",
    "_vendor_win/*.dll",
    "_vendor_win/*.def",
    "_vendor_win/*.h",
]
